[package]
name = "ouisync-net"
description = "Low-level networking utilities"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytecodec          = "0.4.15"
bytes              = "1.1.0"
futures-util       = { workspace = true }
hex_fmt            = { workspace = true }
num_enum           = { workspace = true }
pin-project-lite   = { workspace = true }
# The quinn-udp package that comes in quinn version 0.11.4 - 0.11.6 (inclusive)
# has an issue causing large packets to not be delivered between Linux and
# Android. The issue has been resolved by commit b1bd28e9 which, at time of
# writing this text, has not yet made it into quinn. It did made it into new
# quinn-udp 0.5.8 however.
quinn-udp          = "0.5.8"
quinn              = "0.11.6"
rand               = { package = "ouisync-rand", path = "../rand" }
rcgen              = { workspace = true }
serde              = { workspace = true }
slab               = { workspace = true }
socket2            = "0.5.7" # To be able to setsockopts before a socket is bound
stun_codec         = "0.3.4"
thiserror          = "1.0.31"
tokio              = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-util         = { workspace = true, features = ["compat"] }
tracing            = { workspace = true }
turmoil            = { workspace = true, optional = true }
yamux              = "0.13.3"

[dev-dependencies]
anyhow             = { workspace = true }
assert_matches     = { workspace = true }
clap               = { workspace = true }
itertools          = "0.13.0"
proptest           = { workspace = true }
similar-asserts    = { workspace = true }
test-strategy      = { workspace = true }
tokio              = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
simulation = ["turmoil"]
