[package]
name = "ouisync-rand"
description = "Drop-in replacement for rand with optional simulation mode"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
once_cell = { version = "1.17", optional = true }
rand = "0.8.5"
tracing = { workspace = true, optional = true }

[features]
simulation = ["once_cell", "tracing"]
