[package]
name = "ouisync-rand"
description = "Drop-in replacement for rand with optional simulation mode"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
once_cell = { workspace = true, optional = true }
rand = "0.8.5"
siphasher = { version = "0.3.10", default_features = false, optional = true }
tracing = { workspace = true, optional = true }

[features]
simulation = ["once_cell", "siphasher", "tracing"]
