[package]
name = "ouisync-rand"
description = "Drop-in replacement for rand with optional simulation mode"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rand = "0.8.5"
siphasher = { version = "1.0.1", default-features = false, optional = true }
tracing = { workspace = true, optional = true }

[features]
simulation = ["siphasher", "tracing"]
