[package]
name = "ouisync-service"
description = "Secure P2P file sharing (service)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes                       = { workspace = true }
clap                        = { workspace = true }
futures-util                = { workspace = true }
hyper                       = { version = "1.4.1", features = ["server", "http1"] }
interprocess                = { version = "2.2.1", features = ["tokio"] }
maxminddb                   = "0.24.0"
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
ouisync                     = { path = "../lib" }
ouisync-bridge              = { path = "../bridge" }
ouisync-vfs                 = { path = "../vfs" }
rmp-serde                   = { workspace = true }
serde                       = { workspace = true }
scoped_task                 = { path = "../scoped_task" }
slab                        = { workspace = true }
state_monitor               = { path = "../state_monitor" }
thiserror                   = { workspace = true }
tokio                       = { workspace = true, features = ["signal"] }
tokio-rustls                = { workspace = true }
tokio-stream                = { workspace = true }
tokio-util                  = { workspace = true, features = ["codec"] }
tracing                     = { workspace = true }
walkdir                     = "2.5.0"

[dev-dependencies]
hex                         = "0.4.3"
rand                        = { workspace = true }
