[package]
name = "ouisync-service"
description = "Secure P2P file sharing (service)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
async-trait                 = { workspace = true }
bytes                       = { workspace = true }
clap                        = { workspace = true }
fs_util                     = { path = "../fs_util" }
futures-util                = { workspace = true }
hex                         = { workspace = true }
hmac                        = { workspace = true }
hyper                       = { version = "1.4.1", features = ["server", "http1"] }
hyper-util                  = { version = "0.1.14", features = [ "tokio"] }
indexmap                    = { workspace = true }
interprocess                = { version = "2.2.2", features = ["tokio"] }
maxminddb                   = "0.24.0"
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
num_enum                    = { workspace = true }
ouisync                     = { path = "../lib" }
ouisync-macros              = { path = "../macros"}
ouisync-tracing-fmt         = { path = "../tracing_fmt" }
ouisync-vfs                 = { path = "../vfs" }
pem                         = { workspace = true }
rand                        = { workspace = true }
rmp-serde                   = { workspace = true }
serde                       = { workspace = true }
serde_bytes                 = { workspace = true }
serde_json                  = { workspace = true }
scoped_task                 = { path = "../scoped_task" }
sha2                        = { workspace = true }
slab                        = { workspace = true }
state_monitor               = { path = "../state_monitor" }
thiserror                   = { workspace = true }
tokio                       = { workspace = true, features = ["signal"] }
tokio-rustls                = { workspace = true }
tokio-stream                = { workspace = true }
tokio-tungstenite           = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
tokio-util                  = { workspace = true, features = ["codec"] }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true, features = ["env-filter", "json"] }
webpki-roots                = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android            = "0.2.2"

[dev-dependencies]
assert_matches              = { workspace = true }
rcgen                       = { workspace = true, features = ["pem"] }
rmp                         = { workspace = true }
tempfile                    = { workspace = true }
reqwest                     = { workspace = true, features = ["rustls-tls"] }

[build-dependencies]
anyhow                      = { workspace = true }
heck                        = { workspace = true }
ouisync-api-parser          = { path = "../api_parser" }

[lints]
workspace = true
