[package]
name = "state_monitor"
description = "Utility for monitoring the state of the program"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deadlock     = { path = "../deadlock" }
indexmap     = "1.9.3"
metrics      = { workspace = true }
metrics-util = { version = "0.16.0", default-features = false, features = ["summary"] }
serde        = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt"] }