[package]
name = "state_monitor"
description = "Utility for monitoring the state of the program"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deadlock     = { path = "../deadlock" }
indexmap     = { workspace = true }
metrics      = { workspace = true }
metrics-util = { workspace = true, features = ["storage"] }
serde        = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt"] }