[package]
name = "ouisync-utilities"
description = "Utilities for working with and debugging OuiSync"
version = "0.1.0"
authors = ["Adam Cigánek <adam@equalit.ie>", "Peter Jankuliak <peter@equalit.ie>"]
license = "MPL-2.0"
edition = "2021"
publish = false

[[bin]]
name = "btdht"
path = "src/btdht.rs"

[dependencies]
async-trait   = "0.1.56"
futures-util = { version = "0.3.21", default-features = false }
btdht = { git = "https://github.com/equalitie/btdht.git", rev = "6b4246b10be4bbebf2bcd9ac5933ad74355bb9b0" }
ouisync-lib = { package = "ouisync", path = "../lib" }
env_logger = "0.9.0"
log = "0.4.17"
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["signal"] }
