[package]
name = "ouisync-utilities"
description = "Utilities for working with and debugging OuiSync"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "btdht"
path = "src/btdht.rs"

[dependencies]
async-trait   = "0.1.56"
futures-util = { version = "0.3.21", default-features = false }
btdht = { git = "https://github.com/equalitie/btdht.git", rev = "6b4246b10be4bbebf2bcd9ac5933ad74355bb9b0" }
ouisync-lib = { package = "ouisync", path = "../lib" }
env_logger = "0.9.0"
log = "0.4.17"
structopt = "0.3.26"
tokio = { workspace = true, features = ["signal"] }
