[package]
name = "ouisync-vfs"
description = "Secure P2P file sharing (virtual filesystem)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bench]]
name = "bench_vfs"
harness = false

[dependencies]
camino = "1.0.9"
ouisync-lib = { package = "ouisync", path = "../lib" }
slab = "0.4.6"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(any(target_os = "linux"))'.dependencies]
fuser = "0.14.0"
libc = "0.2.139"
bitflags = "2.4.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
xpc-connection = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
deadlock = { path = "../deadlock" }
# Patch to force compilation of dokan2.dll when `DOKAN_DLL_OUTPUT_PATH` is
# defined even if dokan is installed.
# https://github.com/dokan-dev/dokan-rust/pull/7
dokan = { git = "https://github.com/inetic/dokan-rust", branch = "env-to-recompile-dll" }
dokan-sys = { git = "https://github.com/inetic/dokan-rust", branch = "env-to-recompile-dll" }
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["ntstatus", "winnt"]  }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
proptest = "1.0"
rand = "0.8.5"
tempfile = "3.2"
test-strategy = "0.2.1"
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }

