[package]
name = "ouisync-vfs"
description = "Secure P2P file sharing (virtual filesystem)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bench]]
name = "bench_vfs"
harness = false

[dependencies]
camino = "1.0.9"
ouisync-lib = { package = "ouisync", path = "../lib" }
slab = "0.4.6"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(any(target_os = "linux"))'.dependencies]
fuser = "0.15.0"
libc = "0.2.139"
bitflags = "2.6.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
xpc-connection = "0.2.3"

[target.'cfg(target_os = "windows")'.dependencies]
deadlock = { path = "../deadlock" }
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["ntstatus", "winnt"]  }

[target.'cfg(target_os = "windows")'.dependencies.dokan]
git = "https://github.com/dokan-dev/dokan-rust"
rev = "d1ed57a508d93b3bbb04c37e9ba56ef9692176f7"

[target.'cfg(target_os = "windows")'.dependencies.dokan-sys]
git = "https://github.com/dokan-dev/dokan-rust"
rev = "d1ed57a508d93b3bbb04c37e9ba56ef9692176f7"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
test-strategy = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }

[features]
