[package]
name = "ouisync-bindgen"
description = "Bindings generator for the ouisync library"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "bindgen"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
heck = "0.5.0"
syn = { version = "2.0.82", default-features = false, features = ["parsing", "full", "extra-traits"] }
thiserror = { workspace = true }
