[package]
name = "ouisync-bindgen"
description = "Bindings generator for the ouisync library"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "bindgen"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
heck               = { workspace = true }
ouisync-api-parser = { path = "../../api_parser" }
syn                = { workspace = true, features = ["parsing", "full", "extra-traits"] }
thiserror          = { workspace = true }
