[package]
name = "ouisync-local-discovery"
description = "Utilities for working with and debugging OuiSync"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "local-discovery"
path = "src/local-discovery.rs"

[dependencies]
async-trait = { workspace = true }
futures-util = { version = "0.3.21", default-features = false }
ouisync-lib = { package = "ouisync", path = "../../lib" }
env_logger = "0.11.5"
log = "0.4.17"
rand = { workspace = true }
tokio = { workspace = true }
hex = "0.4.3"
chrono = "0"
