[package]
name = "ouisync-repogen"
description = "Ouisync repository share token generator"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ouisync = { path = "../../lib" }
